refactor(service): ♻️ 完善集群服务实例状态管理与配置下载功能
重构 ClusterServiceInstanceServiceImpl 类，主要改进如下：
1. 启用并完善 ClusterServiceDashboardService 和 ClusterAlertHistoryService 的注入
2. 重写服务实例状态检测逻辑，基于告警历史判断停止/告警状态
3. 实现客户端配置下载功能 generateClientConfigPath 方法
4. 添加 DTO 转换器提高代码可维护性
5. 优化配置版本比较逻辑，增加空值检查

修复了以下问题：
- 状态检测时使用了空集合而不是实际查询结果
- 配置比较时未处理可能导致 NPE 的情况
- 服务删除流程中未正确清理相关配置

新增 Logger 记录关键操作日志

Close: #123
Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>